2008-12-12  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    *  src/samplerate.c examples/audio_out.c tests/*.c
    Fix a couple of very minor warnings uncovered by Erik Hovland using a
    static analysis tool.

    * src/src_*.c
    Fix a potential memory leak. Thanks to Peter G. Vavaroutsos for point this
    out.

    * tests/multi_channel_test.c
    Robustify test.

2008-12-11  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * reconfigure.mk autogen.sh
    Remove the first, add the second.

    * configure.ac
    Various updates.

    * tests/multichan_throughput_test.c tests/Makefile.am
    Add new test and hook into build.

2008-11-11  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * doc/index.html
    Update best converter specs.

2008-10-22  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * examples/audio_out.c
    Fix gcc-4.3 compiler warning.

2008-10-17  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * doc/faq.html
    Add Q/A about accuracy of src_ratio field of SRC_DATA struct.

2008-10-09  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * INSTALL
    Fix minor typo. Thanks to Sean Wood.

2008-09-27  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/src_sinc.c
    Optimization. About a 5% improvement in throughput.

2008-09-26  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/util.[ch]
    Add function print_cpu_name.

    * tests/throughput_test.c
    Add ability to do best-of N runs, print CPU type.

2008-09-17  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac
    Add AC_PROG_MKDIR_P.

2008-07-10  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/samplerate.c
    Fix a valgrind warning which occured when the call back function returns
    a count of zero without modifying the pointer value. Thanks to Paul Kelly.

    * tests/callback_test.c
    Add a callback test where the callback returns a zero count without setting