@@ -1,3 +1,8 @@
+2008-12-13  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * tests/multichan_throughput_test.c
+    Do throughput test on all three SINC based converters.
+
 2008-12-12  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     *  src/samplerate.c examples/audio_out.c tests/*.c
